--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
   cupertino_icons: ^0.1.2
   google_sign_in: ^4.5.1
   http: ^0.12.1
+  flutter_twitter_login: ^1.1.0
+
 
 dev_dependencies:
   flutter_test:
