--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   google_sign_in: ^4.5.1
   http: ^0.12.1
   flutter_twitter_login: ^1.1.0
+  twitter_api: ^0.1.2
+
 
 
 dev_dependencies:
